--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
   "keywords": [
     "Everquest",
     "project1999",
-    "project2002",
+    "project2002"
   ],
   "homepage": "https://bitbucket.org/sdlfj/eq-roll-tracker",
   "jest": {
@@ -132,6 +132,7 @@
     "css-loader": "^0.28.0",
     "devtron": "^1.4.0",
     "electron": "^1.6.5",
+    "electron-rebuild": "^1.5.7",
     "electron-builder": "^17.0.1",
     "electron-devtools-installer": "^2.2.0",
     "enzyme": "^2.8.2",
@@ -176,7 +177,6 @@
   },
   "dependencies": {
     "electron-debug": "^1.1.0",
-    "electron-rebuild": "^1.5.7",
     "extract-text-webpack-plugin": "^2.1.0",
     "font-awesome": "^4.7.0",
     "history": "^4.6.1",
