--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,7 @@
     "node": true
   },
   "rules": {
+    "strict": 0,
     "arrow-parens": ["off"],
     "compat/compat": "error",
     "consistent-return": "off",
