--- a/package.json
+++ b/package.json
@@ -26,14 +26,15 @@
     "dev": "cross-env START_HOT=1 npm run hot-updates-server",
     "package": "npm run build && build --publish never",
     "package-win": "npm run build && build --win --x64",
+    "package-win32": "npm run build && build --win --ia32",
     "package-linux": "npm run build && build --linux",
     "package-all": "npm run build && build -mwl",
     "cleanup": "mop -v"
   },
   "browserslist": "electron 1.4",
   "build": {
-    "productName": "ElectronReact",
-    "appId": "org.develar.ElectronReact",
+    "productName": "EqRollTracker",
+    "appId": "org.sdlfj.EqRollTracker",
     "files": [
       "dist/",
       "node_modules/",
