--- a/app/package.json
+++ b/app/package.json
@@ -1,14 +1,15 @@
 {
   "name": "eq-roll-tracker",
   "productName": "EqRollTracker",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "description": "Electron app that monitors EverQuest log files for player /random's",
   "main": "main.js",
   "author": {
     "name": "sdlfj",
     "email": "g_rice@protonmail.com",
-    "url": "https://bitbucket.org/sdlfj"
+    "url": "https://github.com/sdlfj"
   },
+  "homepage": "https://github.com/sdlfj/eq-roll-tracker",
   "scripts": {
     "postinstall": "npm rebuild --runtime=electron --target=1.6.1 --disturl=https://atom.io/download/atom-shell --build-from-source"
   },
