Switch to polling log file
fs.watch doesn't seem to catch every change accurately on windows which
is what node-tail defaults to using.

Switched those settings to use fs.watchFile, polling every second.

--- a/app/package.json
+++ b/app/package.json
@@ -15,7 +15,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "redux-saga": "^0.14.8",
-    "tail": "^1.2.1"
+    "node-tail": "0.0.4",
+    "redux-saga": "^0.14.8"
   }
 }
